--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build ../public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +36,7 @@
       "not dead",
       "not op_mini all"
     ],
+    "proxy": "http://localhost:5000",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
